Added the OS TAR creation

--- a/rpi-sdk/source/rootfs/rpi0/etc/wpa_supplicant/wpa_supplicant-wlan0.conf
+++ b/rpi-sdk/source/rootfs/rpi0/etc/wpa_supplicant/wpa_supplicant-wlan0.conf
@@ -3,9 +3,10 @@ ap_scan=1
 
 network={
     key_mgmt=WPA-PSK
-    ssid="Smart Wifi"
-    psk="altiuxwifi@2020"
+    ssid="test"
+    psk="test"
 }
+
 
 # open network
 #network={
