--- a/rpi-sdk/source/meta-rpi/conf/local.conf
+++ b/rpi-sdk/source/meta-rpi/conf/local.conf
@@ -9,11 +9,11 @@ DISTRO_FEATURES = "ext2 opengl usbhost ${DISTRO_FEATURES_LIBC}"
 
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "pulseaudio"
 
-PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
-PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
+#PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
+#PREFERRED_PROVIDER_jpeg-native = "libjpeg-turbo-native"
 
-PREFERRED_PROVIDER_udev = "eudev"
-VIRTUAL-RUNTIME_init_manager = "sysvinit"
+#PREFERRED_PROVIDER_udev = "eudev"
+#VIRTUAL-RUNTIME_init_manager = "sysvinit"
 
 MACHINE_FEATURES_remove = "apm"
 
@@ -36,7 +36,7 @@ KERNEL_IMAGETYPE = "zImage"
 DISABLE_OVERSCAN = "1"
 ENABLE_UART = "1"
 ENABLE_RPI3_SERIAL_CONSOLE = "1"
-SERIAL_CONSOLES = "115200;ttyAMA0"
+SERIAL_CONSOLES = "115200;tty1"
 # SERIAL_CONSOLES_forcevariable = ""
 
 #DL_DIR = "${HOME}/oe-sources"
