--- a/rpi-sdk/source/rootfs/rpi0/etc/wpa_supplicant.conf
+++ b/rpi-sdk/source/rootfs/rpi0/etc/wpa_supplicant.conf
@@ -3,8 +3,8 @@ ap_scan=1
 
 network={
     key_mgmt=WPA-PSK
-    ssid="Smart Wifi"
-    psk="altiuxwifi@2020"
+    ssid="test"
+    psk="test"
 }
 
 # open network
